# snake

./: .gitignore  README  build.sh  configure.ac  rebuild.sh
lib/: build.bash  error.bash  log.bash
m4/: ax_cxx_compile_stdcxx_14.m4
src/: Makefile.am  abstract_factory.hh  abstract_factory_fwd.hh  berry.cc  berry.hh  berry_control.cc  berry_control.hh  berry_input.hh  berry_input_fwd.hh  berry_output.hh  berry_output_fwd.hh  berry_view.hh  berry_view_fwd.hh  direction.cc  direction.hh  direction_fwd.hh  dummy.cc  dummy.hh  event.cc  event.hh  event_dispatch.cc  event_dispatch.hh  event_dispatch_fwd.hh  event_fwd.hh  game.cc  game.hh  game_control.cc  game_control.hh  game_control_fwd.hh  game_fwd.hh  game_input.hh  game_input_fwd.hh  game_output.hh  game_output_fwd.hh  game_view.hh  game_view_fwd.hh  handle_sdl_event.cc  height.cc  height.hh  height_fwd.hh  (+148 more)
test/: Makefile.am  dummy.cc  game.cc  height.cc  mock_berry_output.cc  mock_berry_output.hh  mock_berry_view.cc  mock_berry_view.hh  mock_factory.cc  mock_factory.hh  mock_game_input.cc  mock_game_input.hh  mock_game_output.cc  mock_game_output.hh  mock_game_view.cc  mock_game_view.hh  mock_renderer_output.cc  mock_renderer_output.hh  mock_renderer_view.hh  mock_score_output.cc  mock_score_output.hh  mock_snake_body_output.cc  mock_snake_body_output.hh  mock_snake_direction_output.cc  mock_snake_direction_output.hh  mock_snake_input.cc  mock_snake_input.hh  mock_snake_output.cc  mock_snake_output.hh  mock_snake_segment_output.cc  mock_snake_segment_output.hh  mock_snake_view.cc  mock_snake_view.hh  mock_window_input.cc  mock_window_input.hh  mock_window_output.cc  mock_window_output.hh  mock_window_view.hh  noop_game_input.cc  noop_game_input.hh  (+30 more)
tools/: add.bash  localvimrc
